[tool.poetry]
name = "unipolmove-client"
version = "0.1.0"
description = "Python client library for UnipolMove API - fetch toll movements and generate expense reports"
authors = ["UnipolMove Python Client Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/unipolmove-python"
repository = "https://github.com/yourusername/unipolmove-python"
keywords = ["unipolmove", "toll", "expense", "report", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "unipolmove_client.py"}]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
